2008-04-10  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/network.py: Handle missing throbber icons (Bug #524829)
	* src/lib/gtkui/network.py: Disable room 'new' and 'join' buttons when network
	  protocol is busy (Bug #523818)
	* src/lib/glchess.py: Import the main module on initialisation not runtime (Bug #524665)
        * src/lib/history.py: Abort history saving if cannot create history directory (Bug #523076)

2008-04-5  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/chessview.py: Abort 3D render if widget_get_gl_context() returns None (Bug #512068)
	* data/ai.xml: Add Gambit Fruit to AI list (Bug #521623)
	* src/lib/game.py: Handle AI players dying before the game starts (Bug #522341)

2008-03-24  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/opengl: Handle GLError->GLerror, GLUError -> GLUerror objects being renamed
	  in PyOpenGL 3.0 (Bug #503238)

2008-03-11  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/opengl/opengl.py: Add board numbering to 3D mode (bug #392286)
	* src/lib/scene/opengl/opengl.py: Fix skip rotation bug when open facing black
        * src/lib/display.py: Fix board numbering hiding when changing 2D<->3D mode

2008-03-10  Jason Clinton  <me@jasonclinton.com>
 
	* src/lib/ai.py: Commit fix for blocker #517347. AI was considered
	losing after a resign occured.

2008-03-02  Robert Ancell  <robert.ancell@gmail.com>

	* src/glchess.in.in: Re-add pygtk.require() call (Bug #521154).

2008-03-02  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/chessview.py: Handle gtk.gtkgl.widget_get_gl_drawable() returning
	  None (bugs #488902 and #512068).
        * src/lib/ai.py: Made AI monitor process more resiliant to OSError exceptions (bug
          #517347).

2008-02-19  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/opengl/new_models.py: Use OpenGL vertex arrays to speed up initial
	  rendering time ~6x. Reduces startup time in 3D mode from 5s to 2s on my system.