@@ -1,3 +1,12 @@
+2008-04-13  Robert Ancell  <robert.ancell@gmail.com>
+
+	* src/lib/gtkui/ai.py: Check PID returned on SIGCHLD (Bug #527686)
+
+2008-04-12  Jordi Mallach  <jordi@sindominio.net>
+
+	* src/lib/main.py: Add missing gettext call for the Application Log
+	viewer.
+
 2008-04-10  Robert Ancell  <robert.ancell@gmail.com>
 
 	* src/lib/gtkui/network.py: Handle missing throbber icons (Bug #524829)
